# pico-ps2famikb

./: CMakeLists.txt  README.md  example.c  neskbdinter.h  pico-ps2kb.c  pico-ps2kb.uf2  pico-usb2famikb.c  tusb_config.h
i2chost/: famikb-i2chost.py
layouts/: jp106iso.c  us104ansi.c
pico-pio-usb/: CMakeLists.txt  pio_usb_host.c
ps2famikb-lib/: CMakeLists.txt  kblayout.c  kbout.pio  nesin.pio  neskbdinter.h  ps2famikb.c  ps2famikb.h
ps2kbd-lib/: ps2kbd.c  ps2kbd.h  ps2kbd.pio
referencepcb/: README.md  usb2famikb_full.kicad_pcb  usb2famikb_full.kicad_prl  usb2famikb_full.kicad_pro
stdinit-lib/: CMakeLists.txt
testapps/: README.md  kbfami-24.04.22.nes  kbfami-24.12.20.nes  kbmhost-24.12.20.nes  kbmtest.nes  kbps2-2024-04-29.uf2  kbps2-24.06.09.nes  kbps2-24.06.16.nes  pico-usb2famikb-noled.uf2  picow-usb2famikb-noled.uf2
usb2famikb-lib/: CMakeLists.txt  pio-usb2famikb.pio  usb2famikb.c  usb2famikb.h
usbhost/: README.md  famikb-usbhost.py  kblayout.txt
